# ChangeLog for sys-apps/usbutils
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.132 2012/01/05 10:02:29 ssuominen Exp $

  05 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> usbutils-004.ebuild:
  ppc64 stable wrt #394577

  04 Jan 2012; Brent Baude <ranger@gentoo.org> usbutils-004.ebuild:
  Marking usbutils-004 ppc for bug 394577

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org> usbutils-004.ebuild:
  alpha/ia64/m68k/s390/sh/sparc/x86 stable wrt #394577

  21 Dec 2011; Markus Meier <maekke@gentoo.org> usbutils-004.ebuild:
  arm stable, bug #394577

  14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> usbutils-004.ebuild:
  Stable for AMD64, wrt bug #394577

  14 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> usbutils-005.ebuild,
  +files/usbutils-005-missing-includes.patch:
  Fix missing limits.h and stddef.h wrt #394633 by Alexandre Rostovtsev. This
  is Debian patch 04-missing-includes.diff.

  13 Dec 2011; Jeroen Roovers <jer@gentoo.org> usbutils-004.ebuild:
  Stable for HPPA (bug #394577).

*usbutils-005 (13 Dec 2011)

  13 Dec 2011; Samuli Suominen <ssuominen@gentoo.org> +usbutils-005.ebuild:
  Version bump wrt #394513 by Rafał Mużyło

*usbutils-004 (26 Aug 2011)

  26 Aug 2011; Tim Harder <radhermit@gentoo.org> +usbutils-004.ebuild:
  Version bump.

  24 Aug 2011; Tim Harder <radhermit@gentoo.org> usbutils-001.ebuild,
  usbutils-002.ebuild, usbutils-003.ebuild:
  Use correct dependency variable (fixes bug #380497).

*usbutils-003 (17 Jun 2011)

  17 Jun 2011; Jeroen Roovers <jer@gentoo.org> +usbutils-003.ebuild:
  Version bump.

  01 May 2011; Kacper Kowalik <xarthisius@gentoo.org> usbutils-001.ebuild:
  ppc64 stable wrt #360531

  30 Apr 2011; Raúl Porcel <armin76@gentoo.org> usbutils-001.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #360531

  21 Apr 2011; Thomas Kahle <tomka@gentoo.org> usbutils-001.ebuild:
  x86 stable per bug 360531
