@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/usbutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.132 2012/01/05 10:02:29 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/usbutils/ChangeLog,v 1.133 2012/01/05 10:03:19 ssuominen Exp $
+
+  05 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -usbutils-001.ebuild,
+  -usbutils-002.ebuild, -usbutils-003.ebuild:
+  old
 
   05 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> usbutils-004.ebuild:
   ppc64 stable wrt #394577
